Some alignment of the UI is fixed

--- a/public/stylesheets/gamePage.css
+++ b/public/stylesheets/gamePage.css
@@ -45,17 +45,16 @@ a{
 /*----------------------------------------button-----------------------------------------------------*/
 .action {
 	font-family: sans-serif;
-	font-size: 20px;
 	position: absolute;
-	left: 850px;
-	top: 420px;
+	left: 47%;
+	top: 64%;
 	z-index: 1;	
 }
 
 input {
 	color:black;
 	text-align: center;
-	font-size: 20px;
+	font-size: 1.2vw;
 	cursor: pointer;
 }
 
@@ -67,7 +66,7 @@ input {
 	height: 20%;
 	background-color: cadetblue;
 	text-align: center;
-	font-size: 120%;
+	font-size: 1.3vw;
 }
 
 .oppositePlayer .name{
@@ -98,14 +97,14 @@ input {
 .rightPlayer .name,.leftPlayer .name{
 	text-align: center;
 	text-transform: uppercase;
-	font-size: 120%;
+	font-size: 1.3vw;
 	color: azure;
 	padding-top: 30%;
 }
 /*------------------------------------------pointTable---------------------------------------*/
 .totalPoint{
 	background-color: paleturquoise;
-	height: 20%;
+	height: 23%;
 	width: 19%;
 	position: absolute;
 	right: 5%;
@@ -118,21 +117,23 @@ input {
 }
 
 .points th{
-	font-size: 105%;
+	font-size: 1.2vw;
 	font-weight: normal;
 	color: #039;
-	border-bottom:2px solid #6678B1;
+	border-bottom:0.2vw solid #6678B1;
 }
 
 .points td{
-	border-top:1px solid #6678B1;
+	font-size: 1.1vw;
+	text-transform: capitalize;
+	border-top:0.1vw solid #6678B1;
 	padding: 3% 20% 0% 20%;
 }
 
 /*---------------------------------------------cardsPlayedOnBoard-------------------------------------*/
 
 .playedCardsBoard {
-	height: 28%;
+	height: 30%;
 	width: 35%;
 	background-color: paleturquoise;
 	position: absolute;
@@ -144,17 +145,16 @@ input {
 .playedCards {
 	float: left;
 	padding-bottom: 17%;
-    padding-right: 2%;
-    padding-left: 1%;
-	margin-top: 35px;
-    margin-left: 90px;
+    padding-left: 7%;
+	margin-top: 9%;
+    margin-left: 19%;
 }
 
 .card0 ,.card1 ,.card2, .card3 {
 	float: left;
-	margin-bottom:2px; 
-	width: 50px;
-	height: 80px;
+	margin-bottom:2px;
+	width: 3vw;
+	height: 20vh;
 }
 /*------------------------------------------------notificationPanel------------------------------------*/
 .status {
@@ -166,25 +166,31 @@ input {
 	left: 34.75%;
 	text-align: center;
 	text-transform: capitalize;
-	font-size: 130%;
+	font-size: 1.4vw;
+	line-height: 220%;
 }
 
 /*------------------------------------------playerHand--------------------------------------------------*/
 .playerSelf {
 	width: 90%;
-	height: 25%;
+	height: 31%;
 	background-color: paleturquoise;
 	position: absolute;
 	bottom: 0.5%;
 	left: 5%;
 }
+.playerSelf .name{
+	text-align: center;
+	text-transform: uppercase;
+	padding:0.5%;
+	font-size: 1.3vw;
+}
 
 .card {
 	background-color: white;
-	width: 3.4em;
-	height: 133px;
-	border-radius: 5px;
-	padding: 4px;
+	width: 5.48vw;
+	height: 17vh;
+	border-radius: 5%;
 	font-family: sans-serif;
 	font-size: 15%;
 	border-style: groove;
@@ -201,19 +207,19 @@ input {
 
 .spade,.club {
 	color: black;
-	font-size: 20px;
+	font-size: 1.3vw;
 }
 
 .diamond,.heart {
 	color: red;
-	font-size: 20px;
+	font-size: 1.3vw;
 }
 
-/*---------------------------------------------------------------------------------------------------------------------------------*/
+/*------------------------------------------------dropDown menu------------------------------------------------------*/
 .red_heart {
 	background-color: white;
-	padding: 1px;
-	font-size: 26px;
+	padding: 1%;
+	font-size: 2vw;
 	color: red;
 	border: none;
 	cursor: pointer;
@@ -232,14 +238,14 @@ input {
    display: none;
    position: absolute;
    background-color: white;
-   min-width: 160px;
+   min-width: 550%;
    overflow: auto;
-   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   box-shadow: 0% 8% 16% 0% rgba(0,0,0,0.2);
 }
 
 .dropdown-content a {
    color: black;
-   padding: 12px 16px;
+   padding: 12% 16%;
    text-decoration: none;
    display: block;
 }
